--- a/components/ufoai/mappack/Makefile
+++ b/components/ufoai/mappack/Makefile
@@ -12,7 +12,7 @@
 # Copyright 2016 Jim Klimov <jimklimov@gmail.com>
 #
 
-include ../../make-rules/shared-macros.mk
+include ../../../make-rules/shared-macros.mk
 
 COMPONENT_NAME=		mappack
 COMPONENT_VERSION=	2.5
@@ -21,7 +21,7 @@ COMPONENT_PROJECT_URL=	http://ufoai.org
 COMPONENT_SRC=		ufoai-$(COMPONENT_VERSION)-$(COMPONENT_NAME)
 COMPONENT_ARCHIVE=	$(COMPONENT_SRC).tar.bz2
 COMPONENT_ARCHIVE_HASH= \
-	sha256:80ae32cb9f568af4dc7ee4d3c05a4c31fc513fc3e31730fed0ce7378237273a9
+	sha256:29a8247f9ff459cab7d4f528c2ec49fb9a73f834bfc25f59fcdc25b08f3a63eb
 COMPONENT_FMRI=		games/ufoai/$(COMPONENT_NAME)
 COMPONENT_LICENSE=	GPLv2
 COMPONENT_LICENSE_FILE=	$(COMPONENT_NAME).license
