firefox: fix typo

--- a/components/firefox/Makefile
+++ b/components/firefox/Makefile
@@ -18,6 +18,7 @@ include ../../make-rules/shared-macros.mk
 
 COMPONENT_NAME= 	firefox
 COMPONENT_VERSION= 	44.0.1
+COMPONENT_REVISION=	1
 COMPONENT_SUMMARY= 	Mozilla Firefox Web browser
 COMPONENT_SRC= 		$(COMPONENT_NAME)-$(COMPONENT_VERSION)
 COMPONENT_ARCHIVE= 	$(COMPONENT_NAME)-$(COMPONENT_VERSION).source.tar.xz
