Move asciidoc, aspell, aspell dictionaries and groff to text category

--- a/components/text/asciidoc/Makefile
+++ b/components/text/asciidoc/Makefile
@@ -13,7 +13,7 @@
 # Copyright 2013 Alexander Pyhalov.  All rights reserved.
 #
 
-include ../../make-rules/shared-macros.mk
+include ../../../make-rules/shared-macros.mk
 
 COMPONENT_NAME= 	asciidoc
 COMPONENT_VERSION= 	8.6.8
