--- a/components/clamav/Makefile
+++ b/components/clamav/Makefile
@@ -16,8 +16,10 @@ include ../../make-rules/shared-macros.mk
 
 COMPONENT_NAME=		clamav
 ### For X.Y.0 versions the TGZ and DIR do not include trailing .0 piece
-### But our package version should better have same number of components
-COMPONENT_VERSION=	0.99
+### But our IPS version should better have same number of components.
+### So the COMPONENT_VERSION may be 0.99 or 0.99.1 (as in original),
+### but the IPS_COMPONENT_VERSION is forced to 3-part 0.99.0 or 0.99.1.
+COMPONENT_VERSION=	0.99.1
 ifeq ($(words $(subst ., ,$(COMPONENT_VERSION))),2)
  IPS_COMPONENT_VERSION=	$(COMPONENT_VERSION).0
 else
@@ -30,7 +32,7 @@ COMPONENT_SUMMARY=	ClamAV $(IPS_COMPONENT_VERSION) - opensource antivirus toolki
 COMPONENT_SRC=		$(COMPONENT_NAME)-$(COMPONENT_VERSION)
 COMPONENT_ARCHIVE=	$(COMPONENT_SRC).tar.gz
 COMPONENT_ARCHIVE_HASH=	\
-	sha256:d2792c8cfadd685fffc40b2199679628815df031fd3149ccf961649fc8787ea9
+	sha256:e144689122d3f91293808c82cbb06b7d3ac9eca7ae29564c5d148ffe7b25d58a
 COMPONENT_PROJECT_URL=	http://www.clamav.org/
 COMPONENT_ARCHIVE_URL=	\
 	http://www.clamav.net/downloads/production/$(COMPONENT_ARCHIVE)
