freeorion moved into subdir

--- a/components/games/freeorion/Makefile
+++ b/components/games/freeorion/Makefile
@@ -12,7 +12,7 @@
 # Copyright 2014 Josef 'Jeff' Sipek <jeffpc@josefsipek.net>
 #
 
-include ../../make-rules/shared-macros.mk
+include ../../../make-rules/shared-macros.mk
 
 COMPONENT_NAME=		freeorion
 COMPONENT_VERSION=	0.4.5
@@ -30,9 +30,9 @@ COMPONENT_CLASSIFICATION="Applications/Games"
 
 CONFIGURE_DEFAULT_DIRS=no
 
-include ../../make-rules/prep.mk
-include ../../make-rules/cmake.mk
-include ../../make-rules/ips.mk
+include $(WS_MAKE_RULES)/prep.mk
+include $(WS_MAKE_RULES)/cmake.mk
+include $(WS_MAKE_RULES)/ips.mk
 
 CONFIGURE_OPTIONS += --prefix-dir=$(CONFIGURE_PREFIX)
 CONFIGURE_OPTIONS += --binary-dir=bin
@@ -64,4 +64,4 @@ test:		$(TEST_32)
 
 BUILD_PKG_DEPENDENCIES =	$(BUILD_TOOLS)
 
-include ../../make-rules/depend.mk
+include $(WS_MAKE_RULES)/depend.mk
