--- a/components/games/openttd/game/Makefile
+++ b/components/games/openttd/game/Makefile
@@ -16,14 +16,13 @@
 include ../../../../make-rules/shared-macros.mk
 
 COMPONENT_NAME=		openttd
-COMPONENT_VERSION=	1.5.3
-COMPONENT_REVISION=	1
+COMPONENT_VERSION=	1.6.0
 COMPONENT_PROJECT_URL=	http://www.openttd.org/en/
 COMPONENT_FMRI=		games/openttd/openttd-core
 COMPONENT_SRC=		$(COMPONENT_NAME)-$(COMPONENT_VERSION)
 COMPONENT_ARCHIVE=	$(COMPONENT_SRC)-source.tar.xz
 COMPONENT_ARCHIVE_HASH=	\
-	sha256:d8b9a7aaca7c9f3ff69b1d210daf1e2658402941bb9b30cb2789a9df73d1ba63
+	sha256:4c12e6b516ffdee20a03ebad80dad85d137130002d6d3e123a568376fe4b4eb2
 COMPONENT_ARCHIVE_URL=	https://binaries.openttd.org/releases/$(COMPONENT_VERSION)/$(COMPONENT_ARCHIVE)
 COMPONENT_LICENSE=	GPLv2
 COMPONENT_LICENSE_FILE=	$(COMPONENT_NAME).license
@@ -56,7 +55,7 @@ CONFIGURE_OPTIONS += --without-menu-entry
 COMPONENT_BUILD_ARGS += DO_NOT_INSTALL_CHANGE_LOG=1
 COMPONENT_BUILD_ARGS += DO_NOT_INSTALL_LICENSE=1
 
-COMPONENT_PRE_CONFIGURE_ACTION=$(CLONEY) $(SOURCE_DIR) $(@D)
+COMPONENT_PRE_CONFIGURE_ACTION=	( $(CLONEY) $(SOURCE_DIR) $(@D) )
 
 build:		$(BUILD_32)
 
