--- a/components/developer/ccache/Makefile
+++ b/components/developer/ccache/Makefile
@@ -16,14 +16,14 @@
 include ../../../make-rules/shared-macros.mk
 
 COMPONENT_NAME=		ccache
-COMPONENT_VERSION=	3.2.4
+COMPONENT_VERSION=	3.2.5
 COMPONENT_PROJECT_URL=	http://ccache.samba.org/
 COMPONENT_DOWNLOAD_URL=	http://samba.org/ftp/$(COMPONENT_NAME)/
 COMPONENT_DOCUMENTATION_URL =	http://ccache.samba.org/manual.html
 COMPONENT_SRC=		$(COMPONENT_NAME)-$(COMPONENT_VERSION)
 COMPONENT_ARCHIVE=	$(COMPONENT_NAME)-$(COMPONENT_VERSION).tar.bz2
 COMPONENT_ARCHIVE_HASH=	\
-    sha256:ffeb967edb549e67da0bd5f44f729a2022de9fdde65dfd80d2a7204d7f75332e
+    sha256:7a553809e90faf9de3a23ee9c5b5f786cfd4836bf502744bedb824a24bee1097
 COMPONENT_ARCHIVE_URL=	$(COMPONENT_DOWNLOAD_URL)/$(COMPONENT_ARCHIVE)
 COMPONENT_SUMMARY=	ccache - cacher of GCC-compiled files to avoid doing the same job twice
 COMPONENT_FMRI=		developer/ccache
@@ -31,7 +31,7 @@ COMPONENT_CLASSIFICATION=	Development/C
 COMPONENT_LICENSE=	"GPLv3,murmurhash,papowell/jhweiss,PostgreSQL,Python,zlib"
 COMPONENT_LICENSE_FILE=	LICENSE.txt
 
-CFLAGS  +=			-D_GNU_SOURCE -D__EXTENSIONS__
+CFLAGS   += $(CPP_LARGEFILES) -D_GNU_SOURCE -D__EXTENSIONS__
 
 include $(WS_TOP)/make-rules/prep.mk
 include $(WS_TOP)/make-rules/configure.mk
