--- a/components/developer/jenkins/files/Makefile
+++ b/components/developer/jenkins/files/Makefile
@@ -7,5 +7,5 @@ build:
 install: 
 	mkdir -p $(DESTDIR)/usr/share/jenkins/war
 	mkdir -p $(DESTDIR)/usr/share/jenkins/war-$(JENKINS_RELEASE)
-	cp -f jenkins-$(JENKINS_VERSION).war $(DESTDIR)/usr/share/jenkins/war-$(JENKINS_RELEASE)/
+	ln -rs jenkins-$(JENKINS_VERSION).war $(DESTDIR)/usr/share/jenkins/war-$(JENKINS_RELEASE)/
 	ln -rs $(DESTDIR)/usr/share/jenkins/war-$(JENKINS_RELEASE)/jenkins-$(JENKINS_VERSION).war $(DESTDIR)/usr/share/jenkins/war/jenkins.war
